syntax = "proto3";
package twirpdefault.bloat.rpc;
option go_package = "twirpdefault/rpc/bloat";

message Blob {
  string key = 1;
  bool compressed = 2;
  bytes value = 3;
}

message BlobRequest {
  string key = 1;
  bool compressed = 2;
  int64 byte_size = 3;
}

service Bloat {
  rpc GetBlob(BlobRequest) returns (Blob);
}
